--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,12 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://http://13.127.170.50:9000//</sonar.host.url>
+		<sonar.host.url>http://http://3.108.41.140:9000///</sonar.host.url>
+		<sonar.login>9cd5ec532001672818d52f220679a9e5bca7859b</sonar.log in>
+		<!--
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password> 
+		<sonar.password>admin</sonar.password>
+              -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
